# codeCompaction

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.TXT  readme.md
IRFactoringTransform/: BBComparing.cpp  BBComparing.h  BBFactoring.cpp  CMakeLists.txt  ForceMergeDecisionMaker.h  ForceMergePAC.h  IDecisionMaker.cpp  IDecisionMaker.h  IProceduralAbstractionCost.h  Pass.cpp
IRFactoringTransform/TargetDependent/: CommonDecisionMaker.cpp  CommonDecisionMaker.h  CommonPAC.cpp  CommonPAC.h  DecisionMaker_arm.h  DecisionMaker_x86_64.h  PAC_arm.cpp  PAC_arm.h  PAC_x86_64.cpp  PAC_x86_64.h
IRMergeBB/: CMakeLists.txt  CompareBB.cpp  CompareBB.h  ForceMergePAC.h  FunctionCompiler.cpp  FunctionCompiler.h  FunctionCost.cpp  FunctionCost.h  IProceduralAbstractionCost.cpp  IProceduralAbstractionCost.h  MergeBB.cpp  TTIPAC.cpp  TTIPAC.h  Utilities.cpp  Utilities.h
IRMergeBB/TargetDependent/: CommonPAC.cpp  CommonPAC.h  PAC_arm.cpp  PAC_arm.h  PAC_x86_64.h
tests/: checkOutput.py  compare.py  lit.cfg  merge.py  readme.md  tests.py
tests/testCases/: GEPOut.ll  differentAttributes.ll  differentOutput.ll  inOneFunction.ll  lifetime.ll  mergeNoOutput.ll  mergeUnusedOutput.ll  mergeWithFunc.ll  mergeWithGlobal.ll  merge_with_func.ll  noOutput.ll  phiNodes.ll  soloOutput.ll  structReturn.ll  twoCases.ll  usingGlobalWithInitializer.ll  withExceptions.ll  withGlobal.ll  withGlobalMerge.ll
tests/utilities/: compile.py  constants.py  functions.py
